@@ -1,0 +1,21 @@
+instruments
+===========
+
+.. dfhack-tool::
+    :summary: Show how to craft instruments.
+    :tags: fort productivity
+
+This tool provides information on how to craft the instruments used by the
+player civilization. For single-piece instruments, it shows the skill and
+material needed to craft it. For multi-piece instruments, it displays the skill
+used in its assembly as well as information on how to craft the necessary
+pieces. It also shows whether the instrument is handheld or placed as a
+building.
+
+Usage
+-----
+
+::
+
+    instruments
+
